# OpenAgentMCP

./: .env.example  .gitignore  AGENT_CONTRACT.md  README.md  SOUL.md  pyproject.toml
docs/: nssm.md
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006.md
docs/directives/: OpenAgentMCP_Phase1_Directive.md  OpenAgentMCP_Phase2_Directive.md  OpenAgentMCP_Phase3_Directive.md  OpenAgentMCP_Phase4_Directive.md  OpenAgentMCP_Phase5_Directive.md
docs/state/: current.md
openagent/: __init__.py  assessor.py  cli.py  git_context.py  model_router.py  models.py  repo_cache.py  repo_scanner.py  scanner.py  scope_guard.py  server.py  state_writer.py  test_command_resolver.py  test_log_reader.py  test_runner.py  writer.py
tests/: conftest.py  test_assessor.py  test_assessor_phase7.py  test_cli.py  test_git_context.py  test_model_router.py  test_models.py  test_repo_cache.py  test_repo_scanner.py  test_scaffold.py  test_scanner.py  test_scope_guard.py  test_server.py  test_state_writer.py  test_test_command_resolver.py  test_test_log_reader.py  test_test_runner.py  test_writer.py
