[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openagent-directive"
version = "0.3.0"
description = "Repo-aware directive generator with optional MCP server"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Robert Floyd Dugger", email = "RFDITServices@gmail.com"}
]
keywords = ["code-analysis", "directive", "mcp", "developer-tools", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.1.7",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "rich>=14.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
mcp = ["fastmcp>=0.4.0"]
dev = ["pytest>=8.0.0", "pytest-mock>=3.0.0"]

[project.urls]
Homepage = "https://github.com/rfd62794/OpenAgentMCP"
Repository = "https://github.com/rfd62794/OpenAgentMCP"
"Bug Tracker" = "https://github.com/rfd62794/OpenAgentMCP/issues"

[project.scripts]
openagent = "openagent.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["openagent"]
